<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
    <import type="com.finalwork.marvelview.viewmodel.DetailViewModel"/>
        <import type="android.text.TextUtils"/>
        <import type="com.finalwork.marvelview.model.viewobject.CharacterVO"></import>
        <import type="android.view.View"/>

        <variable
            name="character"
            type="CharacterVO" />
        <variable
            name="detailViewModel"
            type="DetailViewModel" />
        <variable
            name="attribution"
            type="java.lang.String" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".view.DetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height_extended"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="true">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/TextAppearance.Character.Name"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@{character.name}">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:transitionName="@string/transition_character_image"
                imageUrl="@{character.image}"
                app:layout_collapseMode="parallax"
                tools:src="@mipmap/ic_launcher">

            </ImageView>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/AppTheme.AppBarOverlay"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>



        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/label_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                     android:textColor="@android:color/black"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/text_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@{TextUtils.isEmpty(character.description) ? @string/unavailable_description: character.description}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textIsSelectable="true"
                    tools:text="@string/unavailable_description"/>

                <!--Comics-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:text="@string/label_comics"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                         android:textColor="@android:color/black"
                        android:textSize="20sp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_comics"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_list_section_height"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:visibility="@{character.comics.empty ? View.GONE : View.VISIBLE}"
                        app:layoutManager="LinearLayoutManager"
                        tools:listitem="@layout/item_list_section" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:text="@string/unavailable_data"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:visibility="@{character.comics.empty ? View.VISIBLE : View.GONE}" />

                </LinearLayout>

                <!--Series-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:text="@string/label_series"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                         android:textColor="@android:color/black"
                        android:textSize="20sp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_series"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_list_section_height"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:visibility="@{character.series.empty ? View.GONE : View.VISIBLE}"
                        app:layoutManager="LinearLayoutManager"
                        tools:listitem="@layout/item_list_section" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:text="@string/unavailable_data"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:visibility="@{character.series.empty ? View.VISIBLE : View.GONE}" />

                </LinearLayout>

                <!--Stories-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:text="@string/label_stories"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                         android:textColor="@android:color/black"
                        android:textSize="20sp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_stories"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_list_section_height"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:visibility="@{character.stories.empty ? View.GONE : View.VISIBLE}"
                        app:layoutManager="LinearLayoutManager"
                        tools:listitem="@layout/item_list_section" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:text="@string/unavailable_data"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:visibility="@{character.stories.empty ? View.VISIBLE : View.GONE}" />

                </LinearLayout>

                <!--Events-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:text="@string/label_events"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_events"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/item_list_section_height"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:visibility="@{character.events.empty ? View.GONE : View.VISIBLE}"
                        app:layoutManager="LinearLayoutManager"
                        tools:listitem="@layout/item_list_section" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:text="@string/unavailable_data"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:visibility="@{character.events.empty ? View.VISIBLE : View.GONE}" />

                </LinearLayout>

                <!--Links-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:text="@string/label_related_links"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="?attr/dividerVertical"
                    android:orientation="vertical"
                    android:showDividers="middle">

                    <!--Detail-->

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="?attr/listPreferredItemHeight"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:onClick="@{() -> detailViewModel.linkClick(character.detail)}"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:text="@string/link_detail"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:visibility="@{character.detail != null ? View.VISIBLE : View.GONE}"/>

                    <!--Wiki-->

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="?attr/listPreferredItemHeight"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:onClick="@{() -> detailViewModel.linkClick(character.wiki)}"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:text="@string/link_wiki"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:visibility="@{character.wiki != null ? View.VISIBLE : View.GONE}"/>

                    <!--Comic Link-->

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="?attr/listPreferredItemHeight"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:onClick="@{() -> detailViewModel.linkClick(character.comicLink)}"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:text="@string/link_comic"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:visibility="@{character.comicLink != null ? View.VISIBLE : View.GONE}"/>

                </LinearLayout>

                <!--Attribution-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:text="@{attribution}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    tools:text="Data provided by Marvel. © 2020 Marvel"/>

            </LinearLayout>




        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>